# Social-Media-Automation

./: .gitignore  README.md  requirements.txt
discord-social-bot/: .env.example  DockerFile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
discord-social-bot/src/: bot.py  comands_handler.py  commands_handler.py  config.py  initialisation.py  testbot.py  testinstagram.py
discord-social-bot/src/cogs/: account_commands.py  base_command.py  facebook_cog.py  hello.py  help_commands.py  instagram_cogs.py  moderation_commands.py  post_commands.py  social_media.py
discord-social-bot/src/services/: facebook.py  instagram.py  instagram_aiograpi.py  linkedin.py  schedular_service.py  tiktok.py
discord-social-bot/src/utils/: databasefile.py  helpers.py  oauth.py  oauth_server.py
discord-social-bot/src/utils/database/: encryption.py  model.py  mongodb_handler.py
discord-social-bot/tests/: dbtest.py  test_database_con.py  test_hello.py  testschedular.py
