[tool.poetry]
name = "discord-social-bot"
version = "0.1.0"
description = "A Discord bot that manages social media platforms like Facebook, Instagram, LinkedIn, and TikTok."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
discord.py = "^2.0.0"
requests = "^2.25.1"
python-dotenv = "^0.17.1"
apscheduler = "^3.7.0"
sqlalchemy = "^1.4.0"
cryptography = "^3.4.7"
aiohttp = "^3.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"